# sddm-variant-manager

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  flake.nix  org.github.melker.sddmvariantmanager.appdata.xml  org.github.melker.sddmvariantmanager.desktop  qtcreator-dev.sh  run-dev.sh  shell.nix
icons/: generate_icons.py
nix/: package.nix
packaging/arch/: PKGBUILD  build-package.sh
src/: greetercapabilities.cpp  greetercapabilities.h  greeterpreview.cpp  greeterpreview.h  main.cpp  platform.cpp  platform.h  themeapplier.cpp  themeapplier.h  themeinstaller.cpp  themeinstaller.h  themescanner.cpp  themescanner.h
src/qml/: AppColorScheme.qml  Main.qml  ThemeListItem.qml  qmldir
